ports change for phpmyadmin

--- a/config/nginx/conf.d/phpmyadmin.conf
+++ b/config/nginx/conf.d/phpmyadmin.conf
@@ -1,7 +1,6 @@
 server {
-    listen      80;
-    listen      [::]:80;
-    server_name phpmyadmin.test;
+    listen      80 default_server;
+    listen      [::]:82 default_server;
     root        /usr/src/phpmyadmin;
     index       index.php;
 
