--- a/config/nginx/conf.d/phpmyadmin.conf
+++ b/config/nginx/conf.d/phpmyadmin.conf
@@ -1,6 +1,7 @@
 server {
-    listen      80 default_server;
-    listen      [::]:82 default_server;
+    listen      80;
+    listen      [::]:80;
+    server_name phpmyadmin.test;
     root        /usr/src/phpmyadmin;
     index       index.php;
 
