--- a/config/nginx/conf.d/php.conf
+++ b/config/nginx/conf.d/php.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name php.test;
-    root   /var/www/php;
+    root   /var/www/html;
     index  index.php;
 
     location ~* \.php$ {
