--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - ${USERDIR}/config/db/config:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE="demo"
+      - MYSQL_DATABASE=demo
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
